--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,8 @@ body.dark h1 {
   margin-bottom: 10px;
 
   /* Hide scrollbar in all browsers */
-  scrollbar-width:thin;           /* Firefox */
-  -ms-overflow-style:thin;        /* IE/Edge */
+  scrollbar-width:none;           /* Firefox */
+  -ms-overflow-style:none;        /* IE/Edge */
 }
 
 .popup input,
